Add loading recent applications in DashBoarad

--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -100,21 +100,7 @@
                         <div class="card-header">
                             <h5>Recent Jobs</h5>
                         </div>
-                        <div class="card-body" id="recent-jobs-container">
-                           <!-- <div class="job-card card mb-2">
-                                <div class="card-body">
-                                    <h6>Kitchen Plumbing Repair</h6>
-                                    <p class="small text-muted" style="color: white !important;">Posted 2 days ago</p>
-                                    <span class="badge bg-success status-badge">5 Applications</span>
-                                </div>
-                            </div>
-                            <div class="job-card card mb-2">
-                                <div class="card-body">
-                                    <h6>Electrical Wiring</h6>
-                                    <p class="small text-muted" style="color: white !important;">Posted 1 week ago</p>
-                                    <span class="badge bg-warning status-badge">In Progress</span>
-                                </div>
-                            </div>-->
+                        <div class="card-body" id="recent-jobs-container" >
                         </div>
                     </div>
                 </div>
@@ -123,28 +109,8 @@
                         <div class="card-header">
                             <h5>Recent Applications</h5>
                         </div>
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between align-items-center mb-2">
-                                <div>
-                                    <strong>John Smith</strong>
-                                    <small class="text-muted d-block" style="color: white !important;">Applied for Kitchen Plumbing</small>
-                                </div>
-                                <div>
-                                    <button class="btn btn-sm btn-success">Accept</button>
-                                    <button class="btn btn-sm btn-outline-danger">Decline</button>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <strong>Mike Johnson</strong>
-                                    <small class="text-muted d-block" style="color: white !important;">Applied for Electrical Wiring</small>
-                                </div>
-                                <div>
-                                    <button class="btn btn-sm btn-success">Accept</button>
-                                    <button class="btn btn-sm btn-outline-danger">Decline</button>
-                                </div>
-                            </div>
+                        <div class="card-body" id="recent-applications-container">
+
                         </div>
                     </div>
                 </div>
