--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -60,8 +60,8 @@
                     <div class="card stats-card">
                         <div class="card-body text-center">
                             <i class="fas fa-briefcase fa-2x mb-2"></i>
-                            <h4>12</h4>
-                            <p>Active Jobs</p>
+                            <h4 id="my-jobs-count">0</h4>
+                            <p>My Jobs</p>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="card stats-card">
                         <div class="card-body text-center">
                             <i class="fas fa-users fa-2x mb-2"></i>
-                            <h4>28</h4>
+                            <h4 id="applications-count">0</h4>
                             <p>Applications</p>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                     <div class="card stats-card">
                         <div class="card-body text-center">
                             <i class="fas fa-check-circle fa-2x mb-2"></i>
-                            <h4>8</h4>
+                            <h4 id="completed-jobs-count">0</h4>
                             <p>Completed</p>
                         </div>
                     </div>
@@ -86,9 +86,9 @@
                 <div class="col-md-3">
                     <div class="card stats-card">
                         <div class="card-body text-center">
-                            <i class="fas fa-star fa-2x mb-2"></i>
-                            <h4>4.8</h4>
-                            <p>Rating</p>
+                            <i class="fas fa-bolt fa-2x mb-2"></i>
+                            <h4 id="active-jobs-count">0</h4>
+                            <p>Active Jobs</p>
                         </div>
                     </div>
                 </div>
