Load Admin DashBoard and counts

--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -56,103 +56,30 @@
                 <div id="admin-dashboard-content" class="dashboard-section active">
                     <h2 class="mb-4">Admin Dashboard</h2>
                     <div class="row mb-4">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="card stats-card">
                                 <div class="card-body text-center">
                                     <i class="fas fa-users fa-2x mb-2"></i>
-                                    <h4>1,247</h4>
+                                    <h4 id="total-users">0</h4>
                                     <p>Total Users</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="card stats-card">
                                 <div class="card-body text-center">
                                     <i class="fas fa-briefcase fa-2x mb-2"></i>
-                                    <h4>89</h4>
+                                    <h4 id="active-jobs">0</h4>
                                     <p>Active Jobs</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="card stats-card">
                                 <div class="card-body text-center">
                                     <i class="fas fa-check-circle fa-2x mb-2"></i>
-                                    <h4>456</h4>
+                                    <h4 id="completed-jobs">0</h4>
                                     <p>Completed Jobs</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card stats-card">
-                                <div class="card-body text-center">
-                                    <i class="fas fa-dollar-sign fa-2x mb-2"></i>
-                                    <h4>$45,670</h4>
-                                    <p>Platform Revenue</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="card">
-                                <div class="card-header">
-                                    <h5>Recent Activities</h5>
-                                </div>
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div>
-                                            <strong>New user registered</strong>
-                                            <small class="text-muted d-block">Sarah Johnson joined as homeowner</small>
-                                        </div>
-                                        <small class="text-muted">2 hours ago</small>
-                                    </div>
-                                    <hr>
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div>
-                                            <strong>Job completed</strong>
-                                            <small class="text-muted d-block">Kitchen plumbing repair finished</small>
-                                        </div>
-                                        <small class="text-muted">4 hours ago</small>
-                                    </div>
-                                    <hr>
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div>
-                                            <strong>Payment processed</strong>
-                                            <small class="text-muted d-block">$320 payment completed</small>
-                                        </div>
-                                        <small class="text-muted">6 hours ago</small>
-                                    </div>
-                                    <hr>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div>
-                                            <strong>Worker verified</strong>
-                                            <small class="text-muted d-block">Mike Thompson's credentials approved</small>
-                                        </div>
-                                        <small class="text-muted">1 day ago</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="card">
-                                <div class="card-header">
-                                    <h5>System Alerts</h5>
-                                </div>
-                                <div class="card-body">
-                                    <div class="alert alert-warning" role="alert">
-                                        <i class="fas fa-exclamation-triangle me-2"></i>
-                                        <strong>Payment Issue:</strong> 3 payments require manual review
-                                    </div>
-                                    <div class="alert alert-info" role="alert">
-                                        <i class="fas fa-info-circle me-2"></i>
-                                        <strong>Server Update:</strong> Scheduled maintenance tonight at 2 AM
-                                    </div>
-                                    <div class="alert alert-success" role="alert">
-                                        <i class="fas fa-check-circle me-2"></i>
-                                        <strong>Backup Complete:</strong> Daily backup completed successfully
-                                    </div>
                                 </div>
                             </div>
                         </div>
