--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -362,6 +362,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+<script src="../Js/RefreshToken.js"></script>
 <script src="../Js/HomeOwnerDashBoard.js"></script>
 
 </body>
