HomeDash Board functions updated with swalfire alert messages

--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -176,6 +176,11 @@
             </div>
         </section>
 
+        <div id="updateMessage" style="position: fixed; top: 20px; right: 20px; z-index: 9999; display: none; padding: 10px 20px; border-radius: 8px; background-color: #ff4c4c; color: white; box-shadow: 0 4px 12px rgba(0,0,0,0.5);">
+            Failed to save post!
+        </div>
+
+
         <!-- My Jobs Section -->
         <section id="homeowner-my-jobs-content" class="dashboard-section">
             <h2 class="mb-4">My Jobs</h2>
@@ -362,6 +367,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../Js/HomeOwnerDashBoard.js"></script>
 
 </body>
