--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -6,6 +6,7 @@
   <title>NeedItDone - You post it, they do it</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../Css/Login.css">
 </head>
 <body>
@@ -48,6 +49,7 @@
         </g>
       </svg>
       <input id="userNAME" class="input" type="text" placeholder="User name" required/>
+      <span></span>
     </div>
 
     <div class="input-container">
@@ -58,7 +60,10 @@
           <path d="M16 10.5L18 8.5L15 5.5H13L12 6.5L16 10.5Z"></path>
         </g>
       </svg>
-      <input id="passWORD" class="input" type="password" placeholder="Password" required/>
+      <input id="passWORD" type="password" class="input" placeholder="Password" required>
+      <span class="input-group-text" id="togglePassword"  >
+      <i class="bi bi-eye"></i>
+      </span>
     </div>
 
     <div class="login-button">
@@ -74,8 +79,11 @@
 </div>
 
 
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="../Js/Login.js"></script>
+<script>
+</script>
 </body>
 </html>
