--- a/FrontEnd/Pages/SignUpPage.html
+++ b/FrontEnd/Pages/SignUpPage.html
@@ -6,6 +6,7 @@
   <title>NeedItDone - You post it, they do it</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../Css/SignUp.css">
 </head>
 <body>
@@ -84,6 +85,9 @@
       </svg>
       <input id="password" class="input" type="password" placeholder="Password"  pattern=".{8,}"
              title="Password must be at least 8 characters long" required />
+      <span class="input-group-text togglePassword" >
+      <i class="bi bi-eye"></i>
+      </span>
     </div>
 
     <div class="input-container">
@@ -97,6 +101,9 @@
       </svg>
       <input id="confirmPassword" class="input" type="password" placeholder="Confirm Password"  pattern=".{8,}"
              title="Password must be at least 8 characters long" required />
+      <span class="input-group-text togglePassword"  >
+      <i class="bi bi-eye"></i>
+      </span>
     </div>
 
     <div class="signup-button">
@@ -128,8 +135,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../Js/SignUp.js"></script>
-<script>
 
-</script>
 </body>
 </html>
