Company mail added / goolge sign in tried

--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -179,16 +179,16 @@
             <div class="footer-section">
                 <h4>Contact Info</h4>
                 <ul>
-                    <li><i class="fas fa-phone me-2"></i>+1 (555) 123-4567</li>
-                    <li><i class="fas fa-envelope me-2"></i>info@needitdone.com</li>
-                    <li><i class="fas fa-map-marker-alt me-2"></i>123 Service Street, City, State 12345</li>
+                    <li><i class="fas fa-phone me-2"></i>+94 713804825</li>
+                    <li><i class="fas fa-envelope me-2"></i>needitdoneinfo@gmail.com</li>
+                    <li><i class="fas fa-map-marker-alt me-2"></i>301/B/2 Sangananda Road, Raigama, Bandaragama</li>
                     <li><i class="fas fa-clock me-2"></i>24/7 Available</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2024 NeedItDone. All rights reserved. | Privacy Policy | Terms of Service</p>
+            <p>&copy; 2025 NeedItDone. All rights reserved. | Privacy Policy | Terms of Service</p>
         </div>
     </div>
 </footer>
