--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -7,6 +7,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../Css/Login.css">
 </head>
 <body>
@@ -69,12 +70,34 @@
     <div class="login-button">
       <input id="loginBtn" class="input" type="submit" value="Login" />
     </div>
-    <div id="loginError" class="text-danger mt-1 " style="min-height: 10px; font-size: small; font-family: Bahnschrift"></div>
-    <div class="text-center mt-1">
+
+  <!--  <div id="g_id_onload"
+         data-client_id="188745450878-mft7eiau74ispdrf3l78ndhn74acrtoq.apps.googleusercontent.com"
+         data-context="signin"
+         data-ux_mode="popup"
+         data-callback="handleGoogleLogin">
+    </div>
+
+    <div class="g_id_signin" data-type="standard"></div>-->
+    <div id="loginError" class="text-dange " style="min-height: 10px; font-size: small; font-family: Bahnschrift"></div>
+
+    <div class="text-center">
       <a href="#" onclick="navigateTo('register')">Don't have an account? Register here</a>
     </div>
 
     <div class="texture"></div>
+    <!-- Role Selection Modal -->
+    <div class="modal fade" id="roleModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-center p-4">
+          <h3 class="mb-4">Choose Your Role</h3>
+          <div class="role-btn-container">
+            <button class="role-btn" id="homeownerBtn">Homeowner</button>
+            <button class="role-btn" id="workerBtn">Worker</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </form>
 </div>
 
@@ -82,8 +105,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="../Js/Login.js"></script>
-<script>
-</script>
 </body>
 </html>
