Add checkAcc staus

--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -79,7 +79,7 @@
     </div>
 
     <div class="g_id_signin" data-type="standard"></div>-->
-    <div id="loginError" class="text-dange " style="min-height: 10px; font-size: small; font-family: Bahnschrift"></div>
+    <div id="loginError" class="text-danger " style="min-height: 10px; font-size: small; font-family: Bahnschrift"></div>
 
     <div class="text-center">
       <a href="#" onclick="navigateTo('register')">Don't have an account? Register here</a>
