--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+<nav class="navbar navbar-expand-lg ">
   <div class="container">
     <a class="navbar-brand" href="HomePage.html">
       <i class="fas fa-tools me-2"></i>NeedItDone
