--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -6,7 +6,539 @@
     <title>NeedItDone - You post it, they do it</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../Css/HomePage.css">
+    <style>:root {
+        --primary-color: #8b5cf6; /* Vibrant purple */
+        --secondary-color: #0f172a;
+        --accent-color: #f59e0b; /* Warm amber */
+        --success-color: #22c55e;
+        --danger-color: #ef4444;
+        --dark-color: #020617;
+        --darker-color: #1e293b;
+        --card-dark: #0f172a;
+        --card-darker: #1e293b;
+        --light-color: #f8fafc;
+        --gradient-primary: linear-gradient(135deg, #8b5cf6 0%, #a5b4fc 100%); /* Purple gradient */
+        --gradient-secondary: linear-gradient(135deg, #4f46e5 0%, rgba(79, 70, 229, 0.5) 100%);
+        --gradient-accent: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); /* Amber gradient */
+        --text-dark: #ffffff;
+        --text-light: #d1d5db;
+        --text-muted: #9ca3af;
+        --border-color: #2d3748;
+        --border-light: #4b5563;
+        --glass-bg: rgba(15, 23, 42, 0.7);
+        --glass-border: rgba(209, 213, 219, 0.15);
+    }
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+        line-height: 1.6;
+        color: var(--text-dark);
+        background-color: var(--dark-color);
+        overflow-x: hidden;
+    }
+
+    /* Navigation */
+    .navbar {
+        background: var(--glass-bg) !important;
+        backdrop-filter: blur(16px);
+        border-bottom: 1px solid var(--glass-border);
+        padding: 1rem 0;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .navbar.scrolled {
+        background: rgba(10, 20, 40, 0.95) !important;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+    }
+
+    .navbar-brand {
+        font-weight: 800;
+        font-size: 1.8rem;
+        color: var(--primary-color) !important;
+        transition: all 0.2s ease;
+    }
+
+    .navbar-brand:hover {
+        color: #a78bfa !important;
+        transform: scale(1.03);
+    }
+
+    .nav-link {
+        color: var(--text-light) !important;
+        font-weight: 600;
+        padding: 0.6rem 1.2rem !important;
+        border-radius: 12px;
+        transition: all 0.3s ease;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .nav-link:hover {
+        color: var(--primary-color) !important;
+        background: rgba(139, 92, 246, 0.1);
+        transform: translateY(-1px);
+    }
+
+    .nav-link::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background: var(--primary-color);
+        transform: scaleX(0);
+        transform-origin: right;
+        transition: transform 0.3s ease;
+    }
+
+    .nav-link:hover::after {
+        transform: scaleX(1);
+        transform-origin: left;
+    }
+
+    .navbar-toggler {
+        border: none;
+        color: var(--text-light) !important;
+        transition: transform 0.2s ease;
+    }
+
+    .navbar-toggler:hover {
+        transform: rotate(90deg);
+    }
+
+    /* Hero Section */
+    .hero-section {
+        background: var(--gradient-secondary); /* Matches other sections */
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .hero-section::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="50" cy="50" r="1.5" fill="rgba(139,92,246,0.15)"/><circle cx="30" cy="30" r="1" fill="rgba(139,92,246,0.1)"/><circle cx="70" cy="70" r="1" fill="rgba(139,92,246,0.1)"/></pattern></defs><rect width="100" height="100" fill="url(%23grain)"/></svg>');
+        opacity: 0.4;
+    }
+
+    .hero-section::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: radial-gradient(ellipse at center, rgba(139, 92, 246, 0.15) 0%, transparent 60%);
+    }
+
+    .hero-content {
+        position: relative;
+        z-index: 2;
+        text-align: center;
+        color: var(--text-dark);
+    }
+
+    .hero-title {
+        font-size: 4rem;
+        font-weight: 900;
+        margin-bottom: 1.5rem;
+        background: linear-gradient(135deg, #ffffff 0%, #e0e7ff 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        line-height: 1.3;
+    }
+
+    .hero-subtitle {
+        font-size: 1.3rem;
+        margin-bottom: 2.5rem;
+        opacity: 0.85;
+        max-width: 650px;
+        margin-left: auto;
+        margin-right: auto;
+        color: var(--text-light);
+    }
+
+    .cta-buttons {
+        display: flex;
+        gap: 1.5rem;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .btn-modern {
+        padding: 1rem 2.5rem;
+        border-radius: 12px;
+        font-weight: 700;
+        text-transform: none;
+        letter-spacing: 0.5px;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        border: none;
+        position: relative;
+        overflow: hidden;
+        min-width: 220px;
+    }
+
+    .btn-primary-modern {
+        background: var(--gradient-accent); /* Uses amber gradient */
+        color: var(--text-dark);
+        box-shadow: 0 8px 24px rgba(245, 158, 11, 0.3);
+    }
+
+    .btn-primary-modern:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 12px 32px rgba(245, 158, 11, 0.5);
+        background: linear-gradient(135deg, #d97706 0%, #f59e0b 100%);
+    }
+
+    .btn-outline-modern {
+        background: rgba(15, 23, 42, 0.5);
+        color: var(--text-dark);
+        border: 2px solid var(--primary-color); /* Matches purple theme */
+        backdrop-filter: blur(8px);
+    }
+
+    .btn-outline-modern:hover {
+        background: rgba(139, 92, 246, 0.15);
+        border-color: var(--accent-color); /* Amber on hover */
+        color: var(--text-dark);
+        transform: translateY(-4px);
+    }
+
+    /* Services Section */
+    .services-section {
+        background: var(--dark-color);
+        padding: 5rem 0;
+        position: relative;
+    }
+
+    .services-section::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: radial-gradient(circle at top center, rgba(99, 102, 241, 0.08) 0%, transparent 60%);
+    }
+
+    .section-title {
+        text-align: center;
+        margin-bottom: 3.5rem;
+    }
+
+    .section-title h2 {
+        font-size: 2.8rem;
+        font-weight: 800;
+        color: var(--text-dark);
+        margin-bottom: 1rem;
+    }
+
+    .section-title p {
+        font-size: 1.2rem;
+        color: var(--text-light);
+        max-width: 700px;
+        margin: 0 auto;
+    }
+
+    .service-card {
+        background: var(--card-dark);
+        border-radius: 16px;
+        padding: 2rem;
+        text-align: center;
+        transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        border: 1px solid var(--border-color);
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+        height: 100%;
+        position: relative;
+    }
+
+    .service-card:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 12px 32px rgba(0, 0, 0, 0.3);
+        border-color: var(--primary-color);
+        background: var(--card-darker);
+    }
+
+    .service-card::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 3px;
+        background: var(--gradient-accent);
+        transform: scaleX(0);
+        transition: transform 0.3s ease;
+    }
+
+    .service-card:hover::before {
+        transform: scaleX(1);
+    }
+
+    .service-icon {
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto 1.5rem;
+        font-size: 1.8rem;
+        color: var(--text-dark);
+        transition: transform 0.3s ease;
+    }
+
+    .service-icon:hover {
+        transform: scale(1.1);
+    }
+
+    .service-icon.plumbing {
+        background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+    }
+
+    .service-icon.electrical {
+        background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
+    }
+
+    .service-icon.construction {
+        background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+    }
+
+    .service-icon.carpentry {
+        background: linear-gradient(135deg, #a855f7 0%, #7c3aed 100%);
+    }
+
+    .service-icon.mechanical {
+        background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
+    }
+
+    .service-icon.painting {
+        background: linear-gradient(135deg, #06b6d4 0%, #0891b2 100%);
+    }
+
+    .service-card h5 {
+        font-size: 1.4rem;
+        font-weight: 700;
+        margin-bottom: 1rem;
+        color: var(--text-dark);
+    }
+
+    .service-card p {
+        color: var(--text-light);
+        font-size: 0.95rem;
+    }
+
+    /* Footer */
+    .footer {
+        background: var(--darker-color);
+        color: var(--text-light);
+        padding: 3rem 0;
+        border-top: 1px solid var(--border-color);
+    }
+
+    .footer-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        gap: 2rem;
+    }
+
+    .footer-section h4 {
+        font-size: 1.3rem;
+        font-weight: 700;
+        margin-bottom: 1.2rem;
+        color: var(--text-dark);
+    }
+
+    .footer-section p, .footer-section li {
+        color: var(--text-muted);
+        font-size: 0.9rem;
+    }
+
+    .footer-section ul {
+        list-style: none;
+    }
+
+    .footer-section ul li a {
+        color: var(--text-muted);
+        text-decoration: none;
+        transition: color 0.3s ease;
+    }
+
+    .footer-section ul li a:hover {
+        color: var(--primary-color);
+    }
+
+    .social-links {
+        display: flex;
+        gap: 0.8rem;
+    }
+
+    .social-link {
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        background: var(--card-dark);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--text-light);
+        border: 1px solid var(--border-color);
+        transition: all 0.3s ease;
+    }
+
+    .social-link:hover {
+        background: var(--primary-color);
+        color: var(--text-dark);
+        transform: translateY(-3px);
+    }
+
+    .footer-bottom {
+        border-top: 1px solid var(--border-color);
+        padding-top: 1.5rem;
+        text-align: center;
+        color: var(--text-muted);
+        font-size: 0.85rem;
+    }
+
+    /* Animations */
+    .typewriter {
+        overflow: hidden;
+        border-right: .15em solid rgba(255,255,255,0.8);
+        white-space: nowrap;
+        margin: 0 auto;
+        animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+    }
+
+    @keyframes typing {
+        from { width: 0 }
+        to { width: 100% }
+    }
+
+    @keyframes blink-caret {
+        from, to { border-color: transparent }
+        50% { border-color: rgba(255,255,255,0.8); }
+    }
+
+    /* Floating animation */
+    .floating-elements {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    .floating-element {
+        position: absolute;
+        background: rgba(139, 92, 246, 0.15);
+        border-radius: 50%;
+        animation: float 8s ease-in-out infinite;
+        border: 1px solid rgba(139, 92, 246, 0.2);
+    }
+
+    .floating-element:nth-child(1) {
+        width: 90px;
+        height: 90px;
+        top: 40%;
+        left: 45%;
+        animation-delay: 0s;
+    }
+
+    .floating-element:nth-child(2) {
+        width: 70px;
+        height: 70px;
+        top: 50%;
+        left: 35%;
+        animation-delay: 2.5s;
+    }
+
+    .floating-element:nth-child(3) {
+        width: 110px;
+        height: 110px;
+        top: 45%;
+        left: 55%;
+        animation-delay: 5s;
+    }
+
+    @keyframes float {
+        0%, 100% { transform: translate(0, 0) rotate(0deg); }
+        25% { transform: translate(-15px, -15px) rotate(90deg); }
+        50% { transform: translate(15px, 15px) rotate(180deg); }
+        75% { transform: translate(-10px, 10px) rotate(270deg); }
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+        .hero-title {
+            font-size: 2.8rem;
+        }
+
+        .hero-subtitle {
+            font-size: 1.1rem;
+        }
+
+        .btn-modern {
+            min-width: 200px;
+        }
+
+        .section-title h2 {
+            font-size: 2.2rem;
+        }
+    }
+
+    @media (max-width: 576px) {
+        .hero-title {
+            font-size: 2.2rem;
+        }
+
+        .section-title h2 {
+            font-size: 1.8rem;
+        }
+
+        .btn-modern {
+            padding: 0.8rem 1.8rem;
+        }
+    }
+
+    /* Dark Mode Loading Animation */
+    .page-loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: var(--darker-color);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        transition: opacity 0.5s ease;
+    }
+
+    .loader-content {
+        text-align: center;
+        color: var(--text-dark);
+    }
+
+    .spinner {
+        width: 50px;
+        height: 50px;
+        border: 3px solid var(--border-color);
+        border-radius: 50%;
+        border-top-color: var(--primary-color);
+        animation: spin 1s ease</style>
 
 </head>
 <body>
