Add clearForm function/modernize admin Page

--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="../Css/AdminDashBoard.css">
+
 </head>
 <body>
 <!-- Navigation -->
@@ -98,8 +98,9 @@
 
                     <div class="table-responsive">
                         <table class="table table-hover">
-                            <thead class="table-light">
+                            <thead>
                             <tr>
+                                <th>#</th>
                                 <th>User</th>
                                 <th>Type</th>
                                 <th>Email</th>
@@ -130,8 +131,9 @@
 
                     <div class="table-responsive">
                         <table class="table table-hover">
-                            <thead class="table-light">
+                            <thead>
                             <tr>
+                                <th>#</th>
                                 <th>Job Details</th>
                                 <th>Homeowner</th>
                                 <th>Description</th>
