--- a/FrontEnd/Pages/WorkersDashBoard.html
+++ b/FrontEnd/Pages/WorkersDashBoard.html
@@ -183,7 +183,7 @@
                 <h2 class="mb-4">My Applications</h2>
                 <div class="table-responsive">
                   <table class="table table-hover">
-                    <thead class="table-light">
+                    <thead>
                     <tr>
                       <th>#</th>
                       <th>Job Title</th>
