--- a/FrontEnd/Pages/SignUpPage.html
+++ b/FrontEnd/Pages/SignUpPage.html
@@ -47,7 +47,8 @@
         <circle cx="12" cy="7" r="4"></circle>
       </g>
       </svg>
-      <input id="userName" class="input" type="text" placeholder="User Name" required />
+      <input id="userName" class="input" type="text" placeholder="User Name"  pattern="^[A-Za-z]{3,10}$"
+             title="Username must be 3–10 letters only (no numbers or symbols)." required />
     </div>
 
     <div class="input-container">
@@ -60,7 +61,7 @@
         <path d="M9.5 12.5L2.81805 18.5002H21.6362L15 12.5L12 15L9.5 12.5Z"></path>
       </g>
       </svg>
-      <input id="email" class="input" type="email" placeholder="Email Address" required />
+      <input id="email" class="input" type="email" placeholder="Email Address"  pattern="^[\w\.-]+@[\w\.-]+\.\w{2,}$"  title="Enter a valid email address" required />
     </div>
 
     <div class="input-container">
