add  Validation in myprofile

--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -310,7 +310,8 @@
                                         <input type="text" class="form-control" id="profileUserName" name="username"
                                                pattern="^[A-Za-z]{3,10}$"
                                                title="Username must be 3–10 letters only (no numbers or symbols)."
-                                               required>
+                                               readonly>
+                                        <div class="invalid-feedback" id="usernameError"></div>
                                     </div>
                                 </div>
 
